--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@asymmetrik/ngx-leaflet": "^7.0.0",
+    "@auth0/angular-jwt": "^4.1.2",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@types/leaflet": "^1.5.12",
     "bootstrap": "^4.5.0",
