--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~9.1.7",
     "@angular/compiler": "~9.1.7",
     "@angular/core": "~9.1.7",
+    "@angular/elements": "^9.1.7",
     "@angular/forms": "~9.1.7",
     "@angular/localize": "~9.1.7",
     "@angular/platform-browser": "~9.1.7",
@@ -25,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@types/leaflet": "^1.5.12",
     "bootstrap": "^4.5.0",
+    "document-register-element": "^1.7.2",
     "leaflet": "^1.6.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
