--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.5.0",
     "document-register-element": "^1.7.2",
     "leaflet": "^1.6.0",
+    "ngx-dropzone": "^2.2.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
