--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@types/leaflet": "^1.5.12",
     "bootstrap": "^4.5.0",
+    "classlist.js": "^1.1.20150312",
     "document-register-element": "^1.7.2",
     "leaflet": "^1.6.0",
     "ngx-dropzone": "^2.2.2",
