--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "bootstrap": "^4.5.0",
     "classlist.js": "^1.1.20150312",
     "document-register-element": "^1.7.2",
+    "font-awesome": "^4.7.0",
     "leaflet": "^1.6.0",
     "ngx-dropzone": "^2.2.2",
     "rxjs": "~6.5.4",
+    "simplebar": "^5.2.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
