--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ngx-dropzone": "^2.2.2",
     "rxjs": "~6.5.4",
     "simplebar": "^5.2.0",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
